Adcionado a rota para realizar a filtragem por idioma
